objects/InventoryBill__c.object
<CustomObject>
    <fields>
        <fullName>BillNo__c</fullName>
        <displayFormat>B-{0000}</displayFormat>
        <label>BillNo.</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Bill_Number__c</fullName>
        <label>Bill</label>
        <referenceTo>Bill__c</referenceTo>
        <relationshipLabel>InventoryBills</relationshipLabel>
        <relationshipName>InventoryBills</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Inventory_Name__c</fullName>
        <label>Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>InventoryBills</relationshipLabel>
        <relationshipName>InventoryBills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>InventoryBill</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InventoryBills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>